# votewise

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  LICENSE  README.md  commitlint.config.ts  nx.json  package.json  static-server-mac.sh  static-server.cmd  static-server.sh  tsconfig.eslint.json  tsconfig.json
.husky/: pre-commit
apps/storybook/: .eslintignore  .gitignore  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/src/: App.tsx
apps/web/: .eslintrc.js  middleware.ts  next.config.js  next.config.mjs  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
apps/web/app/: action.ts  error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/components/: AuthScreenLayout.tsx  Authform.tsx  ErrorMessage.tsx  IllustrationSection.tsx  Indicator.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  Progressbar.tsx  UnAuthCard.tsx  UserInfo.tsx  UserPill.tsx  auth.tsx  container.tsx  create-post-dialog.tsx  current-user-avatar.tsx  error.tsx  (+28 more)
docker/: docker-compose-development.yml
infra/: docker-compose.dev.yml  nginx.conf
infra/html/: 502.html
scripts/: run-static-server.js
services/api/: .eslintrc.js  README.md  esbuild.config.js  jest.config.js  nodemon.json  package.json  tsconfig.json
services/ml/: .env.example  README.md  main.py  pyproject.toml
services/upload/: .eslintrc.js  .gitignore  API-DOCS.md  README.md  esbuild.config.js  nodemon.json  package.json  server.ts  tsconfig.json
(+890 files in other folders)
